Oprettet ved hjælp af Colaboratory

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "test_notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9a++1OcDzpeGSLfNAM3VR",
+      "authorship_tag": "ABX9TyMZKrdzR/iZy3e1PVMm1v/x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,14 +34,137 @@
         "outputId": "55f702a6-f884-4d3c-dc6a-8b0df84b1b18"
       },
       "source": [
-        "print('test')"
+        "!git remote add origin https://<USERNAME>:<Token>@github.com/<USERNAME>/reponame.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "test\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qk9CrW_F5axc",
+        "outputId": "5cbac28c-8406-4337-d445-e65e323bcd51",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "uname = \"MoustHolmes\"\r\n",
+        "git_token = 'fc611fb0eea5c04d3963e4beda03d36a51ea00bd'\r\n",
+        "\r\n",
+        "!git config --global user.email '$uname@gmail.com'\r\n",
+        "!git config --global user.name '$uname'\r\n",
+        "\r\n",
+        "# from getpass import getpass\r\n",
+        "# password = getpass('Password:')\r\n",
+        "!git clone https://$uname:$git_token@github.com/MoustHolmes/test_repo\r\n",
+        "%cd test_repo\r\n",
+        "# create a file, then add it to stage\r\n",
+        "# !git add hello.txt\r\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'test_repo'...\n",
+            "remote: Enumerating objects: 6, done.\u001b[K\n",
+            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
+            "remote: Total 6 (delta 0), reused 3 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (6/6), done.\n",
+            "/content/test_repo/test_repo\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xc32_kY968C6",
+        "outputId": "acb17beb-a239-411c-eb9a-df70b2887880",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mylib3.py  README.md  test_notebook.ipynb\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H2BNvEzT6vAR",
+        "outputId": "5fbdca8a-4bb7-4e49-f941-3bafb743a018",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile mylib3.py\r\n",
+        "\r\n",
+        "def MyFunction():\r\n",
+        "  print ('My imported function3')"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing mylib3.py\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3kaT1bnx6cdW",
+        "outputId": "d87ec791-41a2-43fc-d0c1-7d2d3a20f934",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!git add .\r\n",
+        "!git commit -m 'commit message'  # commit in Colab\r\n",
+        "!git push origin main            # push to github"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[main 6927614] commit message\n",
+            " 1 file changed, 3 insertions(+)\n",
+            " create mode 100644 mylib3.py\n",
+            "Counting objects: 3, done.\n",
+            "Delta compression using up to 2 threads.\n",
+            "Compressing objects: 100% (3/3), done.\n",
+            "Writing objects: 100% (3/3), 364 bytes | 364.00 KiB/s, done.\n",
+            "Total 3 (delta 0), reused 0 (delta 0)\n",
+            "To https://github.com/MoustHolmes/test_repo\n",
+            "   521fe1b..6927614  main -> main\n"
           ],
           "name": "stdout"
         }
