Oprettet ved hjælp af Colaboratory

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "test_notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZKrdzR/iZy3e1PVMm1v/x",
+      "authorship_tag": "ABX9TyMFqDaiHqy+wcVUQ8KB3q2v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,45 +30,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "a1iMToewRt1S",
-        "outputId": "55f702a6-f884-4d3c-dc6a-8b0df84b1b18"
-      },
-      "source": [
-        "!git remote add origin https://<USERNAME>:<Token>@github.com/<USERNAME>/reponame.git"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "test\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Qk9CrW_F5axc",
-        "outputId": "5cbac28c-8406-4337-d445-e65e323bcd51",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "5cbac28c-8406-4337-d445-e65e323bcd51"
       },
       "source": [
+        "#GitHub setup\r\n",
         "uname = \"MoustHolmes\"\r\n",
         "git_token = 'fc611fb0eea5c04d3963e4beda03d36a51ea00bd'\r\n",
         "\r\n",
         "!git config --global user.email '$uname@gmail.com'\r\n",
         "!git config --global user.name '$uname'\r\n",
-        "\r\n",
-        "# from getpass import getpass\r\n",
-        "# password = getpass('Password:')\r\n",
         "!git clone https://$uname:$git_token@github.com/MoustHolmes/test_repo\r\n",
         "%cd test_repo\r\n",
-        "# create a file, then add it to stage\r\n",
-        "# !git add hello.txt\r\n"
+        "# !git remote add origin https://<USERNAME>:<Token>@github.com/<USERNAME>/reponame.git"
       ],
       "execution_count": 14,
       "outputs": [
@@ -90,36 +64,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xc32_kY968C6",
-        "outputId": "acb17beb-a239-411c-eb9a-df70b2887880",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!ls"
-      ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "mylib3.py  README.md  test_notebook.ipynb\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
+        },
         "id": "H2BNvEzT6vAR",
-        "outputId": "5fbdca8a-4bb7-4e49-f941-3bafb743a018",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "5fbdca8a-4bb7-4e49-f941-3bafb743a018"
       },
       "source": [
+        "#Write a test library with a test function\r\n",
         "%%writefile mylib3.py\r\n",
         "\r\n",
         "def MyFunction():\r\n",
@@ -139,13 +91,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3kaT1bnx6cdW",
-        "outputId": "d87ec791-41a2-43fc-d0c1-7d2d3a20f934",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3kaT1bnx6cdW",
+        "outputId": "d87ec791-41a2-43fc-d0c1-7d2d3a20f934"
       },
       "source": [
+        "#saveing and pushing other files to github\r\n",
         "!git add .\r\n",
         "!git commit -m 'commit message'  # commit in Colab\r\n",
         "!git push origin main            # push to github"
@@ -169,6 +122,18 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F9yPjD4O9YO9"
+      },
+      "source": [
+        "from mylib3 import MyFunction\r\n",
+        "MyFunction()"
+      ],
+      "execution_count": 19,
+      "outputs": []
     }
   ]
 }
