Oprettet ved hjælp af Colaboratory

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "test_notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFqDaiHqy+wcVUQ8KB3q2v",
+      "authorship_tag": "ABX9TyP5gyIU0g15Q5kNhx9r0c0V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,12 +31,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Qk9CrW_F5axc",
-        "outputId": "5cbac28c-8406-4337-d445-e65e323bcd51"
+        "outputId": "3a0d81a8-5c1c-4a56-f1ed-6bf222c49dbe"
       },
       "source": [
         "#GitHub setup\r\n",
         "uname = \"MoustHolmes\"\r\n",
-        "git_token = 'fc611fb0eea5c04d3963e4beda03d36a51ea00bd'\r\n",
+        "# git_token = 'fc611fb0eea5c04d3963e4beda03d36a51ea00bd'\r\n",
+        "git_token = 'd37ec9129111812aed29ff64ddff2b68394812aa'\r\n",
         "\r\n",
         "!git config --global user.email '$uname@gmail.com'\r\n",
         "!git config --global user.name '$uname'\r\n",
@@ -44,17 +45,17 @@
         "%cd test_repo\r\n",
         "# !git remote add origin https://<USERNAME>:<Token>@github.com/<USERNAME>/reponame.git"
       ],
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'test_repo'...\n",
-            "remote: Enumerating objects: 6, done.\u001b[K\n",
-            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
-            "remote: Total 6 (delta 0), reused 3 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (6/6), done.\n",
+            "remote: Enumerating objects: 15, done.\u001b[K\n",
+            "remote: Counting objects: 100% (15/15), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (13/13), done.\u001b[K\n",
+            "remote: Total 15 (delta 5), reused 5 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (15/15), done.\n",
             "/content/test_repo/test_repo\n"
           ],
           "name": "stdout"
@@ -68,21 +69,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H2BNvEzT6vAR",
-        "outputId": "5fbdca8a-4bb7-4e49-f941-3bafb743a018"
+        "outputId": "a855c5ed-2fb4-4788-c8cf-44313b3c7448"
       },
       "source": [
         "#Write a test library with a test function\r\n",
         "%%writefile mylib3.py\r\n",
         "\r\n",
         "def MyFunction():\r\n",
-        "  print ('My imported function3')"
+        "  print ('My imported function IS NOW CHANGED!!!')"
       ],
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Writing mylib3.py\n"
+            "Overwriting mylib3.py\n"
           ],
           "name": "stdout"
         }
@@ -95,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3kaT1bnx6cdW",
-        "outputId": "d87ec791-41a2-43fc-d0c1-7d2d3a20f934"
+        "outputId": "2353d8b4-bcb0-49d8-827c-725301b55f87"
       },
       "source": [
         "#saveing and pushing other files to github\r\n",
@@ -103,21 +104,20 @@
         "!git commit -m 'commit message'  # commit in Colab\r\n",
         "!git push origin main            # push to github"
       ],
-      "execution_count": 17,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[main 6927614] commit message\n",
-            " 1 file changed, 3 insertions(+)\n",
-            " create mode 100644 mylib3.py\n",
+            "[main 5a20efa] commit message\n",
+            " 1 file changed, 1 insertion(+), 1 deletion(-)\n",
             "Counting objects: 3, done.\n",
             "Delta compression using up to 2 threads.\n",
             "Compressing objects: 100% (3/3), done.\n",
-            "Writing objects: 100% (3/3), 364 bytes | 364.00 KiB/s, done.\n",
+            "Writing objects: 100% (3/3), 383 bytes | 383.00 KiB/s, done.\n",
             "Total 3 (delta 0), reused 0 (delta 0)\n",
             "To https://github.com/MoustHolmes/test_repo\n",
-            "   521fe1b..6927614  main -> main\n"
+            "   6a28c8e..5a20efa  main -> main\n"
           ],
           "name": "stdout"
         }
@@ -126,14 +126,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F9yPjD4O9YO9"
+        "id": "F9yPjD4O9YO9",
+        "outputId": "c6c5590e-cc16-4ecc-9543-08be438223b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from mylib3 import MyFunction\r\n",
         "MyFunction()"
       ],
-      "execution_count": 19,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "My imported function IS NOW CHANGED!!!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
